@@ -1,4 +1,5 @@
 Development
+	Add in code from Issue #184 to see if this helps the Debian folks with running the plugin on older versions
 1.0.8
     Updated Spanish translation
     Updated Japanese translation
